samples/_failures_safe/1761621109_f8dbc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0dd00a9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a0dd00a9.c:154:9: error: expected declaration or statement at end of input
  154 |         pos += advance;
      |         ^~~
./samples/SAFE/__tmp_a0dd00a9.c:154:9: error: expected declaration or statement at end of input
